[package]
name = "media-device-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["MediaDevices", "MediaStreamConstraints", "Window", "MediaDeviceInfo", "Document", "Element", "HtmlElement", "Node", "Navigator", "console", "MediaStream", "HtmlVideoElement"] }
